tests/pos/todo/misc/underscore-01.ts
/* foo :: () => number */
function foo():number {
	var _ = 3;
	return _;
}