tests/neg/todo/simple/glob-05.ts
var glob = 20;

/*@ zog :: () => void */
function zog(){
  glob = 3;
}

zog();

assert(glob === 20);
